src/test/06-Errors/error-static-init-member-f.txt
error-static-init-member-f.ck:8:5: error: cannot call non-static function 'Foo.foo()' to initialize a static variable
[8]     foo() => static int THE_NUM;
        ^
